--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "type": "module",
     "dependencies": {
-        "bencode": "^4.0.0"
+        "bencode": "^4.0.0",
+        "url": "^0.11.3"
     },
     "devDependencies": {
         "@types/bencode": "^2.0.4"
